# rarezip

./: Makefile  README.md
gzip/: Makefile  bits.c  deflate.c  gzip.c  gzip.h  inflate.c  librarezip.h  lzw.c  trees.c  unzip.c  util.c  zip.c
python/: .gitignore  rarezip.py
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: bk_zip.rs  rarezip.rs  tests.rs
